clang/test/BSC/Negative/Ownership/Borrow/owned_ptr_points_to_borrow_ptr/owned_ptr_points_to_borrow_ptr.cbs
// RUN: %clang_cc1 -verify %s

// Test cases for owned pointer pointing to borrow pointer (int *borrow *owned):
// borrow checker should reject when the borrowed value does not outlive the owner.

int *borrow *owned safe_malloc1(int *borrow);
void safe_free(void *owned);
void ext(int *borrow p, int *borrow q);

int *borrow *owned test1(int *borrow dummy) {
  int x = 10;
  int *borrow bx = &mut x; // expected-error {{`x` does not live long enough}}
  int *borrow *owned bb1 = safe_malloc1(bx);
  return bb1; // expected-note {{`x` dropped here while still borrowed}}
}

int *borrow *owned test2(int *borrow dummy) {
  int x = 10;
  int *borrow bx = &mut x; // expected-error {{`x` does not live long enough}}
  int *borrow *owned bb1 = safe_malloc1(bx);
  int *borrow *owned bb2 = bb1; // ActionAssign: bb2 = bb1
  return bb2; // expected-note {{`x` dropped here while still borrowed}}
}

int *borrow *owned test3(int *borrow dummy) {
  int x = 10;
  int *borrow bx1 = &mut x;
  int *borrow *owned bb1 = safe_malloc1(bx1);
  int *borrow bx2 = *bb1;
  int *borrow *owned bb2 = safe_malloc1(bx2);
  safe_free((void *owned)bb2);
  safe_free((void *owned)bb1);
  return safe_malloc1(dummy);
}

void test4() {
  int x = 10;
  int *borrow bx = &mut x;
  int *borrow *owned bb1 = safe_malloc1(bx);
  int y = 0;
  int *borrow b2 = &mut y;
  *bb1 = &mut *b2; // expected-note {{`*b2` is borrowed here}}
                   // expected-note@-1 {{first mut borrow occurs here}}
  ext(*bb1, b2); // expected-error {{cannot use `b2` because it was mutably borrowed}}
                 // expected-error@-1 {{cannot borrow `*b2` as mutable more than once at a time}}
  **bb1 = 2;
  safe_free((void *owned)bb1);
}

void test5() {
  int x = 10;
  int *borrow bx = &mut x;
  int *borrow *owned bb1 = safe_malloc1(bx);
  int y = 0;
  int *borrow b2 = &mut y;
  *bb1 = b2; // expected-note {{`*b2` is borrowed here}}
             // expected-note@-1 {{first mut borrow occurs here}}
  ext(*bb1, b2); // expected-error {{cannot use `b2` because it was mutably borrowed}}
                 // expected-error@-1 {{cannot borrow `*b2` as mutable more than once at a time}}
  **bb1 = 2;
  safe_free((void *owned)bb1);
}

void test6() {
  int x = 10;
  int *borrow bx = &mut x;
  int *borrow *owned bb1 = safe_malloc1(bx);
  int y = 0;
  int *borrow b2 = &mut y; // expected-note {{first mut borrow occurs here}}
  *bb1 = &mut y; // expected-error {{cannot borrow `y` as mutable more than once at a time}}
  ext(*bb1, b2);
  **bb1 = 2;
  safe_free((void *owned)bb1);
}

// Test cases for record/struct types containing owned ptr to borrow ptr:
// same borrow rules apply when the pointer is stored in a struct field.

typedef struct {
  int *borrow *owned ptr;
} S;

S *owned safe_malloc2(S);

// FIXME: loans are not collected as expected.
int *borrow *owned test7(int *borrow dummy) {
  int x = 10;
  int *borrow bx = &mut x; // expected-error {{`x` does not live long enough}}
  S s = { .ptr = safe_malloc1(bx) };
  S *owned bb1 = safe_malloc2(s);
  int *borrow *owned bx2 = bb1->ptr; // ActionAssign: bx2 = (*bb1).ptr
  safe_free((void *owned)bb1); // ActionUse: use(bb1)
  return bx2; // expected-note {{`x` dropped here while still borrowed}}
}

typedef struct {
  int *borrow p;
} T;

int *borrow foo1(T);
int *borrow foo2(int, float, T, const char *);

void test8(T s) {
  int *borrow p = foo1(s); // expected-note {{`*s.p` is borrowed here}}
  *(s.p) = 2; // expected-error {{cannot assign to `*s.p` because it is borrowed}}
  *p = 3;
}

void test9(T s) {
  int *borrow p = foo2(1, 2.0f, s, "hello"); // expected-note {{`*s.p` is borrowed here}}
  *(s.p) = 2; // expected-error {{cannot assign to `*s.p` because it is borrowed}}
  *p = 3;
}
